--- a/Yandex Algo 5 week 3.ipynb
+++ b/Yandex Algo 5 week 3.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61cd2381",
+   "id": "320c9c14",
    "metadata": {},
    "source": [
     "### B. Анаграмма?\n",
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbe4ae7d",
+   "id": "10519e1d",
    "metadata": {},
    "source": [
     "### C. Удаление чисел\n",
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "e30290e8",
+   "id": "1d8a3e05",
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b789c2f",
+   "id": "f9461e82",
    "metadata": {},
    "source": [
     "### D. Повторяющееся число\n",
@@ -385,7 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "5c6c9cb5",
+   "id": "a0f2aa45",
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "f5ad7305",
+   "id": "d9490b44",
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb9d1061",
+   "id": "fd543562",
    "metadata": {},
    "source": [
     "### E. Два из трех\n",
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "27906b61",
+   "id": "e0d98d3c",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d71eeaf",
+   "id": "fb314bf2",
    "metadata": {},
    "source": [
     "### F. Замена слов\n",
@@ -645,8 +645,443 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 59,
+   "id": "49581d08",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a b casds dsasa a\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('yandex algo tests/F3_primer.txt') as f:\n",
+    "# with open('yandex algo tests/F3_primer_2.txt') as f:\n",
+    "# with open('input.txt') as f:\n",
+    "    dict_set = {i for i in f.readline().split()}\n",
+    "    text = f.readline().split()\n",
+    "    \n",
+    "max_len_in_dict = 0\n",
+    "for i in dict_set:\n",
+    "    if len(i) > max_len_in_dict:\n",
+    "        max_len_in_dict = len(i)\n",
+    "\n",
+    "\n",
+    "# print(dict_set)\n",
+    "# print('max_len_in_dict', max_len_in_dict)\n",
+    "# print(text)\n",
+    "\n",
+    "for i in range(len(text)):\n",
+    "    len_word = len(text[i])\n",
+    "    shorter_len = min(len_word, max_len_in_dict)\n",
+    "    for j in range(shorter_len):\n",
+    "        if text[i][:j+1] in dict_set:\n",
+    "            text[i] = text[i][:j+1]\n",
+    "            break\n",
+    "    \n",
+    "print(' '.join(text))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc8158d7",
+   "metadata": {},
+   "source": [
+    "### G. Построить квадрат\n",
+    "\n",
+    "Ограничение времени \t2 секунды\n",
+    "Ограничение памяти \t256Mb\n",
+    "\n",
+    "Ввод \tстандартный ввод или input.txt\n",
+    "Вывод \tстандартный вывод или output.txt\n",
+    "\n",
+    "Задано множество, состоящее из N различных точек на плоскости. Координаты всех точек — целые числа. Определите, какое минимальное количество точек нужно добавить во множество, чтобы нашлось четыре точки, лежащие в вершинах квадрата.\n",
+    "\n",
+    "**Формат ввода**\n",
+    "\n",
+    "В первой строке вводится число N (1 ≤ N ≤ 2000) — количество точек.\n",
+    "\n",
+    "В следующих N строках вводится по два числа xi, yi (-108 ≤ xi, yi ≤ 108) — координаты точек.\n",
+    "\n",
+    "**Формат вывода**\n",
+    "\n",
+    "В первой строке выведите число K — минимальное количество точек, которые нужно добавить во множество.\n",
+    "\n",
+    "В следующих K строках выведите координаты добавленных точек xi, yi через пробел. Координаты должны быть целыми и не превышать 109 по модулю.\n",
+    "\n",
+    "Если решений несколько — выведите любое из них.\n",
+    "\n",
+    "**Пример 1**\n",
+    "Ввод\n",
+    "Вывод\n",
+    "\n",
+    "2\n",
+    "\n",
+    "0 1\n",
+    "\n",
+    "1 0\n",
+    "\n",
+    ">2\n",
+    "\n",
+    ">0 0\n",
+    "\n",
+    ">1 1\n",
+    "\n",
+    "**Пример 2**\n",
+    "Ввод\n",
+    "Вывод\n",
+    "\n",
+    "3\n",
+    "\n",
+    "0 2\n",
+    "\n",
+    "2 0\n",
+    "\n",
+    "2 2\n",
+    "\n",
+    "\n",
+    ">1\n",
+    "\n",
+    ">0 0\n",
+    "\n",
+    "**Пример 3**\n",
+    "Ввод\n",
+    "Вывод\n",
+    "\n",
+    "4\n",
+    "\n",
+    "-1 1\n",
+    "\n",
+    "1 1\n",
+    "\n",
+    "-1 -1\n",
+    "\n",
+    "1 -1\n",
+    "\n",
+    "\n",
+    ">0  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "fa33ca86",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_of_coords = set()\n",
+    "\n",
+    "# with open('yandex algo tests/G3_primer.txt') as f:\n",
+    "# with open('yandex algo tests/G3_primer_2.txt') as f:\n",
+    "# with open('yandex algo tests/G3_primer_3.txt') as f:\n",
+    "# with open('yandex algo tests/04 (3)') as f: # 0\n",
+    "with open('yandex algo tests/09 (3)') as f: # 1\n",
+    "# with open('yandex algo tests/11 (1)') as f: # 2\n",
+    "# with open('yandex algo tests/11 (1)_altered_to_0.txt') as f: # 2\n",
+    "# with open('yandex algo tests/14') as f: # 2\n",
+    "# with open('input.txt') as f:\n",
+    "    N = int(f.readline())\n",
+    "    for i in range(N):\n",
+    "        x,y = map(int, f.readline().split())\n",
+    "        list_of_coords.add((x,y))\n",
+    "        \n",
+    "least_dots_to_full_square = 2\n",
+    "least_dots = []\n",
+    "list_of_coords_copy = list_of_coords.copy() # a copy of original set to look up in later\n",
+    "\n",
+    "\n",
+    "\n",
+    "if N == 1:\n",
+    "    print('3')\n",
+    "    print(x+1,y)\n",
+    "    print(x+1,y+1)\n",
+    "    print(x,y+1)\n",
+    "    \n",
+    "else:\n",
+    "    for i in range(len(list_of_coords)-1):\n",
+    "        \n",
+    "        if least_dots_to_full_square == 0:\n",
+    "            break\n",
+    "        \n",
+    "        \n",
+    "        dot_1 = list_of_coords.pop()\n",
+    "        \n",
+    "        for dot_2 in list_of_coords:\n",
+    "            \n",
+    "            dots_to_full_square = 2\n",
+    "            \n",
+    "            #get delta to center, and dx, dy - distances to center of square from each coord\n",
+    "            if dot_1[0] >= dot_2[0]:\n",
+    "                dx = (dot_1[0] - dot_2[0]) / 2\n",
+    "                cent_x = dot_1[0] - dx\n",
+    "            else:\n",
+    "                dx = (dot_2[0] - dot_1[0]) / 2\n",
+    "                cent_x = dot_2[0] - dx\n",
+    "                \n",
+    "            if dot_1[1] >= dot_2[1]:\n",
+    "                dy = (dot_1[1] - dot_2[1]) / 2\n",
+    "                cent_y = dot_1[1] - dy\n",
+    "            else:\n",
+    "                dy = (dot_2[1] - dot_1[1]) / 2\n",
+    "                cent_y = dot_2[1] - dy\n",
+    "                \n",
+    "#             print(cent_x, cent_y, dx, dy)    \n",
+    "            \n",
+    "            #find two other possible corner coords and check if they are present in set\n",
+    "            #signs depend on x and y differences/slope\n",
+    "            #positive slope case\n",
+    "            if ((dot_1[0] >= dot_2[0]) and (dot_1[1] >= dot_2[1])) or \\\n",
+    "            ((dot_1[0] <= dot_2[0]) and (dot_1[1] <= dot_2[1])):\n",
+    "#                 possible_coord_1 = (int(cent_x - dy), int(cent_y + dx))\n",
+    "#                 possible_coord_2 = (int(cent_x + dy), int(cent_y - dx))\n",
+    "                possible_coord_1 = (cent_x - dy, cent_y + dx)\n",
+    "                possible_coord_2 = (cent_x + dy, cent_y - dx)\n",
+    "            #negative slope case\n",
+    "            else:\n",
+    "#                 possible_coord_1 = (int(cent_x + dy), int(cent_y + dx))\n",
+    "#                 possible_coord_2 = (int(cent_x - dy), int(cent_y - dx))#                 \n",
+    "                possible_coord_1 = (cent_x + dy, cent_y + dx)\n",
+    "                possible_coord_2 = (cent_x - dy, cent_y - dx)\n",
+    "            \n",
+    "#             print(f'''{dot_1}, {dot_2} possible_coord_1 {possible_coord_1}\n",
+    "#                  possible_coord_2 {possible_coord_2}''')\n",
+    "            \n",
+    "            dots_to_add = [possible_coord_1, possible_coord_2]\n",
+    "            \n",
+    "            if possible_coord_1 in list_of_coords_copy:\n",
+    "#                 print('possible_coord_1 is present! ', possible_coord_1, 'for dots', dot_1, dot_2)\n",
+    "                dots_to_full_square -= 1\n",
+    "                dots_to_add.remove(possible_coord_1)\n",
+    "            if possible_coord_2 in list_of_coords_copy:\n",
+    "#                 print('possible_coord_2 is present! ', possible_coord_2, 'for dots', dot_1, dot_2)\n",
+    "                dots_to_full_square -= 1\n",
+    "                dots_to_add.remove(possible_coord_2)\n",
+    "                \n",
+    "            if dots_to_full_square < least_dots_to_full_square:\n",
+    "                least_dots_to_full_square = dots_to_full_square\n",
+    "                least_dots = dots_to_add.copy()\n",
+    "                \n",
+    "                if dots_to_full_square == 0:\n",
+    "                    least_dots.clear()\n",
+    "                    break\n",
+    "                    \n",
+    "            if not least_dots:\n",
+    "                least_dots = dots_to_add.copy()\n",
+    "\n",
+    "#calculate not diagonally for experiment\n",
+    "if least_dots_to_full_square == 2:\n",
+    "    least_dots.clear()\n",
+    "    dot_1 = list_of_coords_copy.pop()\n",
+    "    dot_2 = list_of_coords_copy.pop()\n",
+    "    \n",
+    "    if dot_1[0] >= dot_2[0]:\n",
+    "        dx = (dot_1[0] - dot_2[0])\n",
+    "    else:\n",
+    "        dx = (dot_2[0] - dot_1[0])\n",
+    "                \n",
+    "    if dot_1[1] >= dot_2[1]:\n",
+    "        dy = (dot_1[1] - dot_2[1])\n",
+    "    else:\n",
+    "        dy = (dot_2[1] - dot_1[1])\n",
+    "        \n",
+    "    if ((dot_1[0] >= dot_2[0]) and (dot_1[1] >= dot_2[1])) or \\\n",
+    "    ((dot_1[0] <= dot_2[0]) and (dot_1[1] <= dot_2[1])):\n",
+    "        possible_coord_1 = (dot_1[0] + dy, dot_1[1] - dx)\n",
+    "        possible_coord_2 = (dot_2[0] + dy, dot_2[1] - dx)\n",
+    "    #negative slope case\n",
+    "    else:               \n",
+    "        possible_coord_1 = (dot_1[0] + dy, dot_1[1] + dx)\n",
+    "        possible_coord_2 = (dot_2[0] + dy, dot_2[1] + dx)\n",
+    "        \n",
+    "    least_dots = [possible_coord_1, possible_coord_2]\n",
+    "            \n",
+    "# print('ANSWER: ') \n",
+    "# # print(list_of_coords_copy)\n",
+    "# print(least_dots)\n",
+    "# print(dot_1)\n",
+    "# print(dot_2)\n",
+    "print(least_dots_to_full_square)\n",
+    "for i in least_dots:\n",
+    "    print(int(i[0]), int(i[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "85cf12b3",
+   "id": "888b3992",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4273067",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2db6527a",
+   "metadata": {},
+   "source": [
+    "### H. Спички детям не игрушка!\n",
+    "\n",
+    "Ограничение времени \t3 секунды\n",
+    "Ограничение памяти \t256Mb\n",
+    "\n",
+    "Ввод \tстандартный ввод или input.txt\n",
+    "Вывод \tстандартный вывод или output.txt\n",
+    "\n",
+    "Вася любит решать головоломки со спичками. Чаще всего они формулируется следующим образом: дано изображение A, составленное из спичек; переложите в нем минимальное количество спичек так, чтобы получилось изображение B.\n",
+    "\n",
+    "Например, из номера текущего командного чемпионата школьников Санкт-Петербурга по программированию, можно получить ромб с диагональю, переложив всего три спички.\n",
+    "\n",
+    "Головоломки, которые решает Вася, всегда имеют решение. Это значит, что набор спичек, используемый в изображении A, совпадает с набором спичек, используемым в изображении B. Кроме того, в одном изображении никогда не встречаются две спички, у которых есть общий участок ненулевой длины (то есть спички могут пересекаться, но не могут накладываться друг на друга).\n",
+    "\n",
+    "Вася устал решать головоломки вручную, и теперь он просит вас написать, программу, которая будет решать головоломки за него. Программа будет получать описания изображений A и B и должна найти минимальное количество спичек, которые надо переложить в изображении A, чтобы полученная картинка получалась из B параллельным переносом.\n",
+    "\n",
+    "**Формат ввода**\n",
+    "\n",
+    "В первой строке входного файла содержится целое число n — количество спичек в каждом из изображений (1 ≤ n ≤ 1000).\n",
+    "\n",
+    "В следующих n строках записаны координаты концов спичек на изображении A. Спичка номер i описывается целыми числами x1i, y1i, x2i, y2i — координатами ее концов. Следующие n строк содержат описание изображения B в таком же формате. Набор длин этих спичек совпадает с набором длин спичек с изображения A.\n",
+    "\n",
+    "Все координаты по абсолютной величине не превосходят 104. Все спички имеют ненулевую длину, то есть x1i ≠ x2i или y1i ≠ y2i.\n",
+    "\n",
+    "**Формат вывода**\n",
+    "\n",
+    "Выведите в выходной файл минимальное количество спичек, которые следует переложить, чтобы изображение A совпало с изображением B, с точностью до параллельного переноса.\n",
+    "\n",
+    "**Пример 1**\n",
+    "Ввод\n",
+    "Вывод\n",
+    "\n",
+    "5\n",
+    "0 0 1 2\n",
+    "1 0 0 2\n",
+    "2 0 2 2\n",
+    "4 0 3 2\n",
+    "4 0 5 2\n",
+    "9 -1 10 1\n",
+    "10 1 9 3\n",
+    "8 1 10 1\n",
+    "8 1 9 -1\n",
+    "8 1 9 3\n",
+    "\n",
+    "3\n",
+    "\n",
+    "**Пример 2**\n",
+    "Ввод\n",
+    "Вывод\n",
+    "\n",
+    "1\n",
+    "3 4 7 9\n",
+    "-1 3 3 8\n",
+    "\n",
+    "0\n",
+    "\n",
+    "**Пример 3**\n",
+    "Ввод\n",
+    "Вывод\n",
+    "\n",
+    "1\n",
+    "-4 5 2 -3\n",
+    "-12 4 -2 4\n",
+    "\n",
+    "1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "ae0c2e88",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "match_a (0, 0, 1, 2) match_b (8, 1, 9, -1)\n",
+      "match_a (0, 0, 1, 2) match_b (9, -1, 10, 1)\n",
+      "MATCH FOUND!!\n",
+      "match_a (1, 0, 0, 2) match_b (8, 1, 9, -1)\n",
+      "match_a (1, 0, 0, 2) match_b (8, 1, 10, 1)\n",
+      "match_a (1, 0, 0, 2) match_b (10, 1, 9, 3)\n",
+      "MATCH FOUND!!\n",
+      "match_a (2, 0, 2, 2) match_b (8, 1, 9, -1)\n",
+      "match_a (2, 0, 2, 2) match_b (8, 1, 10, 1)\n",
+      "match_a (2, 0, 2, 2) match_b (8, 1, 9, 3)\n",
+      "match_a (4, 0, 3, 2) match_b (8, 1, 9, -1)\n",
+      "match_a (4, 0, 3, 2) match_b (8, 1, 10, 1)\n",
+      "match_a (4, 0, 3, 2) match_b (8, 1, 9, 3)\n",
+      "match_a (4, 0, 5, 2) match_b (8, 1, 9, -1)\n",
+      "match_a (4, 0, 5, 2) match_b (8, 1, 10, 1)\n",
+      "match_a (4, 0, 5, 2) match_b (8, 1, 9, 3)\n",
+      "MATCH FOUND!!\n",
+      "2\n",
+      "[(0, 0, 1, 2), (1, 0, 0, 2), (2, 0, 2, 2), (4, 0, 3, 2), (4, 0, 5, 2)]\n",
+      "{(8, 1, 9, -1), (8, 1, 10, 1)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "matches_A = []\n",
+    "matches_B = set()\n",
+    "\n",
+    "with open('yandex algo tests/H3_primer.txt') as f:\n",
+    "# with open('yandex algo tests/H3_primer_2.txt') as f:\n",
+    "# with open('yandex algo tests/H3_primer_3.txt') as f:\n",
+    "# with open('input.txt') as f:\n",
+    "    n = int(f.readline())\n",
+    "    for i in range(n):\n",
+    "        x1,y1,x2,y2 = map(int, f.readline().split())\n",
+    "        matches_A.append((x1,y1,x2,y2))\n",
+    "    for i in range(n):\n",
+    "        x1,y1,x2,y2 = map(int, f.readline().split())\n",
+    "        matches_B.add((x1,y1,x2,y2))\n",
+    "        \n",
+    "        \n",
+    "def already_good(match_A, match_B):\n",
+    "    if ((match_A[0] - match_B[0]) == (match_A[2] - match_B[2])) and \\\n",
+    "    ((match_A[1] - match_B[1]) == (match_A[3] - match_B[3])):\n",
+    "        return True\n",
+    "    \n",
+    "    else:\n",
+    "        return False\n",
+    "    \n",
+    "\n",
+    "for match_a in matches_A:\n",
+    "    for match_b in matches_B:\n",
+    "        print('match_a', match_a, 'match_b', match_b)\n",
+    "        if already_good(match_a, match_b):\n",
+    "            print('MATCH FOUND!!')\n",
+    "            matches_B.remove(match_b)\n",
+    "            break\n",
+    "       \n",
+    "print(len(matches_B))\n",
+    "    \n",
+    "print(matches_A)\n",
+    "print(matches_B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "178f98e1",
    "metadata": {},
    "outputs": [],
    "source": []
