--- a/Yandex Algo 5 week 3.ipynb
+++ b/Yandex Algo 5 week 3.ipynb
@@ -1007,34 +1007,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 58,
    "id": "ae0c2e88",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "match_a (0, 0, 1, 2) match_b (8, 1, 9, -1)\n",
-      "match_a (0, 0, 1, 2) match_b (9, -1, 10, 1)\n",
-      "MATCH FOUND!!\n",
-      "match_a (1, 0, 0, 2) match_b (8, 1, 9, -1)\n",
-      "match_a (1, 0, 0, 2) match_b (8, 1, 10, 1)\n",
-      "match_a (1, 0, 0, 2) match_b (10, 1, 9, 3)\n",
-      "MATCH FOUND!!\n",
-      "match_a (2, 0, 2, 2) match_b (8, 1, 9, -1)\n",
-      "match_a (2, 0, 2, 2) match_b (8, 1, 10, 1)\n",
-      "match_a (2, 0, 2, 2) match_b (8, 1, 9, 3)\n",
-      "match_a (4, 0, 3, 2) match_b (8, 1, 9, -1)\n",
-      "match_a (4, 0, 3, 2) match_b (8, 1, 10, 1)\n",
-      "match_a (4, 0, 3, 2) match_b (8, 1, 9, 3)\n",
-      "match_a (4, 0, 5, 2) match_b (8, 1, 9, -1)\n",
-      "match_a (4, 0, 5, 2) match_b (8, 1, 10, 1)\n",
-      "match_a (4, 0, 5, 2) match_b (8, 1, 9, 3)\n",
-      "MATCH FOUND!!\n",
-      "2\n",
-      "[(0, 0, 1, 2), (1, 0, 0, 2), (2, 0, 2, 2), (4, 0, 3, 2), (4, 0, 5, 2)]\n",
-      "{(8, 1, 9, -1), (8, 1, 10, 1)}\n"
+     "ename": "KeyError",
+     "evalue": "(-1, -1, 0, 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[58], line 101\u001b[0m\n\u001b[0;32m     99\u001b[0m intersection \u001b[38;5;241m=\u001b[39m set_of_distances_A\u001b[38;5;241m.\u001b[39mintersection(dict_of_precomp_distances_B[value])\n\u001b[0;32m    100\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m item \u001b[38;5;129;01min\u001b[39;00m intersection:\n\u001b[1;32m--> 101\u001b[0m     \u001b[38;5;28;01mdel\u001b[39;00m same_oriented_matches_A[item]\n\u001b[0;32m    102\u001b[0m len_of_intersect \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(intersection)\n\u001b[0;32m    103\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m len_of_intersect \u001b[38;5;241m>\u001b[39m max_same_matches:\n",
+      "\u001b[1;31mKeyError\u001b[0m: (-1, -1, 0, 0)"
      ]
     }
    ],
@@ -1042,9 +1027,10 @@
     "matches_A = []\n",
     "matches_B = set()\n",
     "\n",
-    "with open('yandex algo tests/H3_primer.txt') as f:\n",
+    "# with open('yandex algo tests/H3_primer.txt') as f:\n",
     "# with open('yandex algo tests/H3_primer_2.txt') as f:\n",
     "# with open('yandex algo tests/H3_primer_3.txt') as f:\n",
+    "with open('yandex algo tests/09 (4)') as f:\n",
     "# with open('input.txt') as f:\n",
     "    n = int(f.readline())\n",
     "    for i in range(n):\n",
@@ -1054,28 +1040,95 @@
     "        x1,y1,x2,y2 = map(int, f.readline().split())\n",
     "        matches_B.add((x1,y1,x2,y2))\n",
     "        \n",
+    "def calc_dx_dy_for_one_match(match_input):\n",
+    "    if match_input[0] >= match_input[2]:\n",
+    "        x1 = match_input[0]\n",
+    "        x2 = match_input[2]\n",
+    "        y1 = match_input[1]\n",
+    "        y2 = match_input[3]\n",
+    "    else:\n",
+    "        x1 = match_input[2]\n",
+    "        x2 = match_input[0]\n",
+    "        y1 = match_input[3]\n",
+    "        y2 = match_input[1]\n",
+    "    \n",
+    "    dx = x1 - x2\n",
+    "    dy = y1 - y2\n",
+    "    \n",
+    "    return dx, dy\n",
     "        \n",
-    "def already_good(match_A, match_B):\n",
-    "    if ((match_A[0] - match_B[0]) == (match_A[2] - match_B[2])) and \\\n",
-    "    ((match_A[1] - match_B[1]) == (match_A[3] - match_B[3])):\n",
+    "        \n",
+    "def same_orient(match_A, match_B):\n",
+    "    dx1, dy1 = calc_dx_dy_for_one_match(match_A)\n",
+    "    dx2, dy2 = calc_dx_dy_for_one_match(match_B)\n",
+    "    \n",
+    "    if (dx1 == dx2) and (dy1 == dy2):\n",
     "        return True\n",
     "    \n",
     "    else:\n",
     "        return False\n",
     "    \n",
     "\n",
+    "def calc_dx_dy_btwn_two_matches(match_A, match_B):\n",
+    "        dx1 = match_A[0] - match_B[0]\n",
+    "        dx2 = match_A[2] - match_B[0]\n",
+    "        dx3 = match_A[2] - match_B[2]\n",
+    "        dx4 = match_A[0] - match_B[2]\n",
+    "        \n",
+    "        dy1 = match_A[1] - match_B[1]\n",
+    "        dy2 = match_A[3] - match_B[1]\n",
+    "        dy3 = match_A[3] - match_B[3]\n",
+    "        dy4 = match_A[1] - match_B[3]\n",
+    "        \n",
+    "        dx_set = {dx1, dx2, dx3, dx4}\n",
+    "        dy_set = {dy1, dy2, dy3, dy4}\n",
+    "        \n",
+    "        return dx_set, dy_set\n",
+    "    \n",
+    "def set_of_distances_cal(one_match, other_matches):\n",
+    "    set_of_all_dist = set()\n",
+    "    for i in range(len(other_matches)):\n",
+    "        dist_x1 = one_match[0] - other_matches[i][0]\n",
+    "        dist_x2 = one_match[2] - other_matches[i][2]\n",
+    "        dist_y1 = one_match[1] - other_matches[i][1]\n",
+    "        dist_y2 = one_match[3] - other_matches[i][3]\n",
+    "        one_distance_measure = (dist_x1, dist_x2, dist_y1, dist_y2)\n",
+    "        set_of_all_dist.add(one_distance_measure)\n",
+    "    \n",
+    "    return set_of_all_dist\n",
+    "\n",
+    "\n",
+    "same_oriented_matches_B = []  \n",
+    "same_oriented_matches_A = {}\n",
+    "\n",
     "for match_a in matches_A:\n",
     "    for match_b in matches_B:\n",
-    "        print('match_a', match_a, 'match_b', match_b)\n",
-    "        if already_good(match_a, match_b):\n",
-    "            print('MATCH FOUND!!')\n",
-    "            matches_B.remove(match_b)\n",
-    "            break\n",
-    "       \n",
-    "print(len(matches_B))\n",
+    "        if same_orient(match_a, match_b):   \n",
+    "            if match_a in same_oriented_matches_A:\n",
+    "                same_oriented_matches_A[match_a].append(match_b)\n",
+    "            else:\n",
+    "                same_oriented_matches_A[match_a] = [match_b]\n",
+    "            same_oriented_matches_B.append(match_b)\n",
     "    \n",
-    "print(matches_A)\n",
-    "print(matches_B)"
+    "#precompute distances for B set of matches\n",
+    "dict_of_precomp_distances_B = {}\n",
+    "for match_1 in same_oriented_matches_B:\n",
+    "    set_of_all_dist = set_of_distances_cal(match_1, same_oriented_matches_B)\n",
+    "    dict_of_precomp_distances_B[match_1] = set_of_all_dist\n",
+    "            \n",
+    "max_same_matches = 0   \n",
+    "same_oriented_matches_A_as_list = list(same_oriented_matches_A.keys())\n",
+    "\n",
+    "for key in same_oriented_matches_A.keys():\n",
+    "    for value in same_oriented_matches_A[key]:\n",
+    "        set_of_distances_A = set_of_distances_cal(key, same_oriented_matches_A_as_list)\n",
+    "        intersection = set_of_distances_A.intersection(dict_of_precomp_distances_B[value])\n",
+    "        len_of_intersect = len(intersection)\n",
+    "        if len_of_intersect > max_same_matches:\n",
+    "            max_same_matches = len_of_intersect\n",
+    "    \n",
+    "\n",
+    "print(n-max_same_matches)"
    ]
   },
   {
