--- a/Yandex Algo 5 week 4.ipynb
+++ b/Yandex Algo 5 week 4.ipynb
@@ -371,16 +371,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4075c9a3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "questions = []\n",
+    "\n",
+    "with open('yandex algo tests/C4_primer.txt') as f:\n",
+    "# with open('input.txt') as f:\n",
+    "    n,m = map(int, f.readline().split())\n",
+    "    soldiers = [i for i in map(int, f.readline().split())]\n",
+    "    for line in range(m):\n",
+    "        regiments, orks = map(int, f.readline().split())\n",
+    "        questions.append([regiments, orks])\n",
+    "        \n",
+    "soldiers_pre_sums = [0]\n",
+    "for i in range(n):\n",
+    "    soldiers_pre_sums.append(soldiers[i]+soldiers_pre_sums[i])\n",
+    "    \n",
+    "for q in questions:\n",
+    "    regiments_needed = q[0]\n",
+    "    orks_needed = q[1]\n",
+    "\n",
+    "    answer = -1    \n",
+    "    \n",
+    "    #check later if regiments < n+1\n",
+    "    left = regiments_needed\n",
+    "    right = n+1\n",
+    "    \n",
+    "    while left < right:\n",
+    "        middle = (left + right) // 2\n",
+    "        current_sum = soldiers_pre_sums[middle] - soldiers_pre_sums[middle - regiments_needed]\n",
+    "\n",
+    "        if current_sum == orks_needed:\n",
+    "            answer = middle - regiments_needed + 1\n",
+    "            break\n",
+    "            \n",
+    "        elif current_sum < orks_needed:\n",
+    "            left = middle + 1\n",
+    "            \n",
+    "        else:\n",
+    "            right = middle\n",
+    "            \n",
+    "    print(answer)\n",
+    "    \n",
+    "# print(soldiers)\n",
+    "# print(soldiers_pre_sums)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "39084d65",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e07763cb",
+   "metadata": {},
+   "source": [
+    "### D. Рапорт\n",
+    "\n",
+    "Ограничение времени \t2 секунды\n",
+    "Ограничение памяти \t256Mb\n",
+    "\n",
+    "Ввод \tстандартный ввод или input.txt\n",
+    "Вывод \tстандартный вывод или output.txt\n",
+    "\n",
+    "Верс нужно подготовить рапорт о последнем боевом вылете. Она уже сочинила в голове текст, осталось лишь его записать. Рапорт будет состоять из двух частей: первая будет содержать n слов, i-е из которых состоит из ai букв, вторая — m слов, j-е из которых состоит из bj букв. Язык Крии не содержит никаких знаков препинания. Верс должна записать рапорт на клетчатом рулоне бумаги, шириной w клеток. Так как рапорт состоит из двух частей, она разделит вертикальной чертой рулон на две части целой ширины, после чего в левой части напишет первую часть, а в правой — вторую.\n",
+    "\n",
+    "Обе части рапорта записываются аналогично, каждая на своей части рулона. Одна буква слова занимает ровно одну клетку. Первое слово записывается в первой строке рулона, начиная с самой левой клетки этой части рулона. Каждое следующее слово, если это возможно, должно быть записано в той же строке, что и предыдущее, и быть отделено от него ровно одной пустой клеткой. Иначе, оно пишется в следующей строке, начиная с самой левой клетки. Если ширина части рулона меньше, чем длина какого-то слова, которое должно быть написано в этой части, написать эту часть рапорта на части рулона такой ширины невозможно.\n",
+    "\n",
+    "Гарантируется, что можно провести вертикальную черту так, что обе части рапорта возможно написать. Верс хочет провести вертикальную черту так, чтобы длина рулона, которой хватит, чтобы написать рапорт, была минимальна. Помогите ей найти эту минимальную длину.\n",
+    "\n",
+    "**Формат ввода**\n",
+    "В первой строке даны три целых числа w, n и m — ширина рулона, количество слов в первой и второй части рапорта (1≤w≤109; 1≤n,m≤100000).\n",
+    "\n",
+    "В следующей строке дано n целых чисел ai — длина i-го слова первой части рапорта 1≤ai≤109.\n",
+    "\n",
+    "В следующей строке дано m целых чисел bj — длина j-го слова второй части рапорта 1≤bj≤109.\n",
+    "\n",
+    "Гарантируется, что возможно провести черту так, что обе части рапорта возможно написать.\n",
+    "\n",
+    "**Формат вывода**\n",
+    "В единственной строке выведите одно целое число — минимальную длину рулона, которой достаточно, чтобы написать рапорт.\n",
+    "\n",
+    "**Пример**\n",
+    "Ввод\n",
+    "Вывод\n",
+    "\n",
+    "15 6 6\n",
+    "2 2 2 3 2 2\n",
+    "3 3 5 2 4 3\n",
+    "\n",
+    "3\n",
+    "\n",
+    "**Примечания**\n",
+    "В тесте из примера рулон можно разделить на две части, проведя черту между 7 и 8 столбцом клеток, а затем записать по два слова в каждой строке в обеих частях рапорта. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24510648",
    "metadata": {},
    "outputs": [],
    "source": []
